--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RUNTIME</title>
     <link rel="stylesheet" href="css/styles.css">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <section id="HomePage">
-        <div id="heure">
+    <section class="HomePage">
+        <div class="info">
+            <span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
+            <div id="heure"></div>
+            <span>IN SAINT-PIERRE, REUNION.</span>
         </div>
     </section>
 
