--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="HomePage">
+    <section id="HomePage">
         <div class="info">
             <span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
             <div id="heure"></div>
