--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <section id="HomePage">
+        <div class="coment">
+            <p>"The science of operation, as derived from mathematics more<br>espacially, is a science of itself, and has its own abstract truth<br>and value".</p>
+        </div>
+
         <div class="info">
             <span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
             <div id="heure"></div>
