--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RUNTIME</title>
+    <title>RunTime</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
             <p>"The science of operation, as derived from mathematics more<br>espacially, is a science of itself, and has its own abstract truth<br>and value".</p>
         </div>
 
-        <div class="info">
+        <div class="location">
             <span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
             <div id="heure"></div>
             <span>IN SAINT-PIERRE, REUNION.</span>
