--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>RunTime</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <section id="HomePage">
-        <div class="coment">
-            <p>"The science of operation, as derived from mathematics more<br>espacially, is a science of itself, and has its own abstract truth<br>and value".</p>
+        <div id="coment">
+            <p id="opinion">"J’y ai trouvé des paysages extraordinaires, très différents<br>les uns des autres, des paysages qu’on ne s’attend pas<br> à trouver dans l’Océan Indien"</p>
         </div>
+        <i class="fa-solid fa-arrows-rotate refresh" id="bouton"></i>
 
         <div class="location">
             <span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
