--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="location">
             <span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
             <div id="heure"></div>
-            <span>IN SAINT-PIERRE, REUNION.</span>
+            <span>IN PARIS, FRANCE.</span>
         </div>
     </section>
 </body>
