--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="HomePage">
         <div id="coment">
-            <p id="opinion">"J’y ai trouvé des paysages extraordinaires, très différents<br>les uns des autres, des paysages qu’on ne s’attend pas<br> à trouver dans l’Océan Indien"</p>
+            <p id="opinion">"Sans aucun doute la plus belle ville du monde. Entre les<br>monuments, les bords de seine et les boutiques, Paris à tout<br>pour plair à tout le monde et à tous âges"</p>
         </div>
         <i class="fa-solid fa-arrows-rotate refresh" id="bouton"></i>
 
