--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div id="heure"></div>
             <span>IN PARIS, FRANCE.</span>
         </div>
+        <div class="home_btn">MORE</div>
     </section>
 </body>
 <script src="index.js"></script>
