--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="fa-solid fa-arrows-rotate refresh" id="bouton"></i>
 
         <div class="location">
-            <span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
+            <i class="fa-solid fa-sun"></i>&nbsp;<span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
             <div id="heure"></div>
             <span>IN PARIS, FRANCE.</span>
         </div>
