--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RunTime</title>
+    <title>WhatTime</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +17,7 @@
         <i class="fa-solid fa-arrows-rotate refresh" id="bouton"></i>
 
         <div class="location">
-            <i class="fa-solid fa-sun"></i>&nbsp;<span>GOOD MORNING</span><span>, IT'S CURRENTLY</span>
+            <i class="fa-solid fa-sun"></i>&nbsp;<span id="nightday"></span><span>, IT'S CURRENTLY</span>
             <div id="heure"></div>
             <span>IN PARIS, FRANCE.</span>
         </div>
