--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +18,7 @@
         <i class="fa-solid fa-arrows-rotate refresh" id="bouton"></i>
 
         <div class="location">
-            <i class="fa-solid fa-sun"></i>&nbsp;<span id="nightday"></span><span>, IT'S CURRENTLY</span>
+            <span id="sun"></span>&nbsp;<span id="nightday"></span><span>, IT'S CURRENTLY</span>
             <div id="heure"></div>
             <span>IN PARIS, FRANCE.</span>
         </div>
@@ -26,3 +27,5 @@
 </body>
 <script src="index.js"></script>
 </html>
+
+<i class="fa-solid fa-sun"></i>
